# ALPHA-Vote

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  canister_ids.json  dfx.json  release.sh
debug/: dfx_final.json  dfx_initial.json
src/alpha_backend/: Cargo.toml  alpha_backend.did
src/alpha_backend/src/: .history  lib.rs
src/alpha_backend/tests/: integration.rs
src/alpha_backend_initial/: Cargo.toml
src/alpha_backend_initial/src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
util/: .history  _backup.sh  create_test_proposals.sh  init_local_canister_neurons_and_test_proposals.sh
utils/: README.md  retrieve_proposal_canister_call.sh  retrieve_proposal_canister_upgrade.sh  submit_proposal_canister_call.sh  submit_proposal_canister_upgrade.sh
xtask/: Cargo.toml  alpha_vote_test_identity.pem  dfx_final.json  dfx_initial.json
xtask/src/: main.rs
xtask/tests/: e2e.rs
