[package]
name = "xtask"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
duct = "0.13"
duct_sh = "0.13"
scopeguard = "1.2"
delay = "0.3"
ic_principal = "0.1"
candid = "0.10"
anyhow = "1.0"
ic-agent = "0.40.1"
tokio    = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
