[package]
name = "alpha_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
candid               = "0.10.6"
ic-cdk               = "0.16.0"
ic-cdk-macros        = "0.9.0"
ic-cdk-timers        = "0.3.0"
ic-nns-governance    = { git = "https://github.com/dfinity/ic", package = "ic-nns-governance", rev = "6fb2fd1f0512c81578ea0d1984c48851e6c08b0d" }
ic-nns-common        = { git = "https://github.com/dfinity/ic", package = "ic-nns-common",      rev = "6fb2fd1f0512c81578ea0d1984c48851e6c08b0d" }
ic-stable-structures = "0.6.5"
serde = { version    = "1.0.203", features = ["derive"] }
strum                = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
anyhow = "1"
ic-agent = "0.40.1"
ic-universal-canister = { git = "https://github.com/dfinity/ic", package = "universal-canister" }
tokio  = { version = "1", features = ["macros", "rt-multi-thread"] }
pocket-ic = "9"
tests = { path = "../../tests" }
