[package]
name = "alpha_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid                = "0.10.6"
ic-cdk                = "0.16.0"
ic-cdk-macros         = "0.16.0"
ic-cdk-timers         = "0.3.0"
ic-nns-common         = { git = "https://github.com/dfinity/ic.git", rev = "03393bc8" }
ic-nns-governance-api = { git = "https://github.com/dfinity/ic.git", rev = "03393bc8" }
ic-stable-structures  = "0.6.5"
serde = { version     = "=1.0.203", features = ["derive"] }
strum                 = { version = "0.26.3", features = ["derive"] }
